package com.dmm.bootcamp.yatter2024.domain.model

import com.dmm.bootcamp.yatter2024.common.ddd.Identifier

class MediaId(value: String) : Identifier<String>(value)
