package com.dmm.bootcamp.yatter2024.ui.bindingmodel

data class MediaBindingModel(
  val id: String,
  val type: String,
  val url: String,
  val description: String?,
)
